tests/fixtures/invalid/not_callable.torel
unit fixtures.not_callable;

export proc main() -> Exit {
    return Exit.ok();
}
